<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".media.camerax.CameraXActivity">

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="@dimen/value_0dp"
        android:contentDescription="@null"
        android:layout_margin="@dimen/value_8dp"
        android:src="@drawable/ic_outline_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera" />

    <Button
        android:id="@+id/btnCameraX"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/value_8dp"
        android:text="@string/camera_x"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/imgPreview"
        app:layout_constraintBottom_toTopOf="@id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCamera"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/value_8dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@id/btnCameraX"
        app:layout_constraintStart_toEndOf="@id/btnCameraX"
        app:layout_constraintEnd_toStartOf="@id/btnGallery"/>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/value_8dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@id/btnCameraX"
        app:layout_constraintStart_toEndOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_8dp"
        android:text="@string/upload"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>