<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.service.ServiceActivity">

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp"
        android:layout_marginHorizontal="@dimen/value_16dp"
        android:text="@string/start_service"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"/>

    <Button
        android:id="@+id/btnStartBoundService"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp"
        android:layout_marginStart="@dimen/value_16dp"
        android:layout_marginEnd="@dimen/value_8dp"
        android:text="@string/start_bound_service"
        app:layout_constraintTop_toBottomOf="@+id/btnStartService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnStopBoundService"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/btnStopBoundService"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_8dp"
        android:layout_marginEnd="@dimen/value_16dp"
        android:text="@string/stop_bound_service"
        app:layout_constraintTop_toTopOf="@+id/btnStartBoundService"
        app:layout_constraintBottom_toBottomOf="@+id/btnStartBoundService"
        app:layout_constraintStart_toEndOf="@+id/btnStartBoundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>