<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="@dimen/value_4dp"
    android:layout_marginHorizontal="@dimen/value_8dp"
    card_view:cardCornerRadius="@dimen/value_4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_8dp">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/value_100dp"
            android:layout_height="@dimen/value_100dp"
            android:layout_marginStart="@dimen/value_8dp"
            android:layout_marginVertical="@dimen/value_8dp"
            android:contentDescription="@string/app_name" 
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/value_8dp"
            android:layout_toEndOf="@id/imgProfile"
            android:textSize="@dimen/value_16sp"
            android:textStyle="bold"
            card_view:layout_constraintTop_toTopOf="@+id/imgProfile"
            card_view:layout_constraintStart_toEndOf="@+id/imgProfile"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/heroes_name" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="@dimen/value_0dp"
            android:layout_marginTop="@dimen/value_8dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="@+id/imgProfile"
            card_view:layout_constraintEnd_toEndOf="@+id/tvName"
            card_view:layout_constraintStart_toStartOf="@+id/tvName"
            card_view:layout_constraintTop_toBottomOf="@+id/tvName"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>